[Remoting Host] Handle text event characters that are not presented on the keyboard

This CL allows the x11 injector to remap the last keycode to the character if
the character is not on the current keyboard layout.

BUG=645659

Review-Url: https://codereview.chromium.org/2346643003
Cr-Commit-Position: refs/heads/master@{#422585}

Former-commit-id: ab975ef6a5e726359982765e311712f3a0974831