remoting/host/linux/unicode_to_keysym_unittest.cc
@@ -37,8 +37,7 @@ TEST(GetKeySymsForUnicode, Map) {
   };
 
   for (size_t i = 0; i < arraysize(kTests); ++i) {
-    std::vector<uint32_t> keysyms;
-    GetKeySymsForUnicode(kTests[i].code_point, &keysyms);
+    std::vector<uint32_t> keysyms = GetKeySymsForUnicode(kTests[i].code_point);
 
     std::vector<uint32_t> expected(
         kTests[i].expected_keysyms,
